* Autokey documentation cleanup from Dave Mills.
* do not clear config.cache when it is already empty
(4.2.5p170) 2009/05/02 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1152] adjust PARSE to new refclock_pps logic
* Include (4.2.4p7-RC5)
* loopfilter FLL/PLL crossover cleanup from Dave Mills.
* Documentation updates from Dave Mills.
* ntp-keygen cleanup from Dave Mills.
* crypto API cleanup from Dave Mills.
* Add NTP_CACHEVERSION mechanism to ignore incompatible config.cache
* Enable gcc -Wstrict-overflow for gsoc_sntp as well
(4.2.5p169) 2009/04/30 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1171] Note that we never look for -lreadline by default.
* [Bug 1090] Fix bogus leap seconds in refclock_hpgps.
(4.2.5p168) 2009/04/29 Released by Harlan Stenn <stenn@ntp.org>
* Include (4.2.4p7-RC4)
* [Bug 1169] quiet compiler warnings
* Re-enable gcc -Wstrict-prototypes when not building with OpenSSL
* Enable gcc -Wstrict-overflow
* ntpq/ntpdc emit newline after accepting password on Windows
* Updates from Dave Mills:
* ntp-keygen.c: Updates.
* Fix the error return and syslog function ID in refclock_{param,ppsapi}.
* Make sure syspoll is within the peer's minpoll/maxpoll bounds.
* ntp_crypto.c: Use sign_siglen, not len. sign key filename cleanup.
* Bump NTP_MAXEXTEN from 1024 to 2048, update values for some field lengths.
* m4/ntp_lineeditlibs.m4: fix warnings from newer Autoconf
* [Bug 1166] Remove truncation of position (blanking) code in refclock_nmea.c
(4.2.5p167) 2009/04/26 Released by Harlan Stenn <stenn@ntp.org>
* Crypto cleanup from Dave Mills.
(4.2.5p166) 2009/04/25 Released by Harlan Stenn <stenn@ntp.org>
* [Bug 1165] Clean up small memory leaks in the  config file parser
* Correct logconfig keyword declaration to MULTIPLE_ARG
* Enable filename and line number leak reporting on Windows when built
  DEBUG for all the typical C runtime allocators such as calloc,
  malloc, and strdup.  Previously only emalloc calls were covered.